# 25e

./: .mxproject  CMakeLists.txt  PROJECT.md  README.md  README_COMPETITION.md  data.md  hal3.0.ioc
Core/Inc/: main.h  stm32f4xx_it.h  tim.h  usart.h
Core/Src/: gpio.c  main.c  stm32f4xx_it.c  tim.c  usart.c
cmake/: gcc-arm-none-eabi.cmake
modular3.0/: MODULE_GUIDE.md
modular3.0/app_aim/: app_aim.c  app_aim.h
modular3.0/app_bt/: app_bt.c  app_bt.h  app_bt_commands.c  app_bt_internal.h
modular3.0/app_gimbal/: app_gimbal.c  app_gimbal.h
modular3.0/app_imu/: app_imu.c  app_imu.h
modular3.0/app_motion/: app_motion.c  app_motion.h
modular3.0/app_sensor/: app_sensor.c  app_sensor.h
modular3.0/app_task/: app_task.c  app_task.h
modular3.0/app_track/: app_track.c  app_track.h
modular3.0/app_turn/: app_turn.c  app_turn.h
modular3.0/app_vision/: app_vision.c  app_vision.h  app_vision_config.h  app_vision_tools.c  app_vision_tools.h
modular3.0/bsp_dcmotor/: bsp_dcmotor.c  bsp_dcmotor.h
modular3.0/bsp_encoder/: bsp_encoder.c  bsp_encoder.h
modular3.0/bsp_jy61p/: bsp_jy61p.c  bsp_jy61p.h
modular3.0/bsp_sensor/: bsp_sensor.c  bsp_sensor.h
modular3.0/bsp_stepper/: bsp_stepper.c  bsp_stepper.h
modular3.0/maixcam_pro/: README.md  app.yaml  app_config.py  capture_uart.py  main.py  red_circle_yolo11_320_maixcam.labels.txt  red_circle_yolo11_320_maixcam_int8.cvimodel  stm32_uart_smoke.py  target_yolo.mud  target_yolo_uart.py
modular3.0/pid_core/: pid_core.c  pid_core.h
